fixed overflow

--- a/style.css
+++ b/style.css
@@ -392,7 +392,7 @@ padding-top: 30px;
 
 html{
   scroll-behavior: smooth;
-  overflow: hidden;
+  
 
 }
 
@@ -449,11 +449,12 @@ html{
     display: inline;
     width:auto;
     text-align: left;
+    margin: 1rem;
   
   }
 
   .article-card{
-    width :80%;
+    width :100%;
 
 
  
